management-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: management-db
  labels:
    app: management-db
spec:
  clusterIP: None
  selector:
    app: management-db
  ports:
    - name: tcp
      protocol: TCP
      port: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: management-db
spec:
  selector:
    matchLabels:
      app: management-db
  serviceName: "management-db"
  replicas: 1
  template:
    metadata:
      labels:
        app: management-db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
              name: management-db
          volumeMounts: 
            - mountPath: /var/lib/mysql
              name: management-vol

  volumeClaimTemplates:
    - metadata:
        name: management-vol
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
        storageClassName: nfs-client 


          # ostalo je da vidis kako da se odrade ovi klejmovi i ostala sranja vezana za sts
