user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bolnica-user
  labels:
    app: bolnica-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bolnica-user
  template:
    metadata:
      labels:
        app: bolnica-user
    spec:
      containers:
      - name: bolnica-user
        imagePullPolicy: Always
        image: ghcr.io/raf-si-2021/bolnica-user-service:latest
        terminationMessagePath: "/tmp/my-log"
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: bolnica-user
  labels:
    app: bolnica-user
spec:
  selector:
    app: bolnica-user
  ports: 
    - protocol: TCP
      port: 8081
      targetPort: 8081
