user-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-db
  labels:
    app: user-db
spec:
  clusterIP: None
  selector:
    app: user-db
  ports:
    - name: tcp
      protocol: TCP
      port: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-db
spec:
  selector:
    matchLabels:
      app: user-db
  serviceName: "user-db"
  replicas: 1
  template:
    metadata:
      labels:
        app: user-db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
              name: user-db
          volumeMounts: 
            - mountPath: /var/lib/mysql
              name: user-vol
      volumes:
      - name: mysql-initdb
        configMap:
          name: mysql-initdb-config

  volumeClaimTemplates:
    - metadata:
        name: user-vol
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
        storageClassName: nfs-client
