ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bolnica-ingress
  namespace: bolnica-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bolnica.k8s.elab.rs
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend: 
              service:
                name: front
                port: 
                  number: 80
